bootstrap 5 - modulo fundamentos css - especificidade

--- a/hora-de-codar/14_fundamentoscss/index.html
+++ b/hora-de-codar/14_fundamentoscss/index.html
@@ -14,5 +14,10 @@
     <p class="p-texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut quam repellendus eaque iusto voluptatum, ipsum ducimus. Ducimus maiores totam dolorum enim quos ratione est deleniti! Suscipit itaque placeat maxime tempora.</p>
     <p class="p-texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut quam repellendus eaque iusto voluptatum, ipsum ducimus. Ducimus maiores totam dolorum enim quos ratione est deleniti! Suscipit itaque placeat maxime tempora.</p>
     <p class="p-texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut quam repellendus eaque iusto voluptatum, ipsum ducimus. Ducimus maiores totam dolorum enim quos ratione est deleniti! Suscipit itaque placeat maxime tempora.</p>
+    <div>
+        <p>este é especifico</p>
+        <p class="p-dentro-da-div">este é mas especifico</p>
+        <p id="p-super-especifico">este é muito mas especifico</p>
+    </div>
 </body>
 </html>
