bootstrap 5 - modulo fundamentos css - maneiras de adicionar cor

--- a/hora-de-codar/14_fundamentoscss/index.html
+++ b/hora-de-codar/14_fundamentoscss/index.html
@@ -19,5 +19,10 @@
         <p class="p-dentro-da-div">este é mas especifico</p>
         <p id="p-super-especifico">este é muito mas especifico</p>
     </div>
+    <div>
+        <p class="nome">nome da cor</p>
+        <p class="hexa">hexadecimal</p>
+        <p class="rgba">rgba</p>
+    </div>
 </body>
 </html>
