bootstrap 5 - modulo fundamentos css - fonts

--- a/hora-de-codar/14_fundamentoscss/backgrounds.html
+++ b/hora-de-codar/14_fundamentoscss/backgrounds.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+    <div>
+        <a href="fontes.html">arquivo de fontes</a>
+    </div>
     <div class="div-backgrounds">
         <h1 class="titulo-background">esse é o reino dos backgrounds</h1>
     </div>
