bootstrap 5 - modulo fundamentos css - position static

--- a/hora-de-codar/14_fundamentoscss/positions.html
+++ b/hora-de-codar/14_fundamentoscss/positions.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <div class="div-position static"></div>
+    <div class="div-position static"></div>
+    <div class="div-position static"></div>
+    <div class="div-position static"></div>
 </body>
 </html>
