--- a/hora-de-codar/14_fundamentoscss/positions.html
+++ b/hora-de-codar/14_fundamentoscss/positions.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="div-position static"></div>
-    <div class="div-position static"></div>
+    <div class="div-position relative"></div>
     <div class="div-position static"></div>
     <div class="div-position static"></div>
 </body>
