--- a/hora-de-codar/14_fundamentoscss/positions.html
+++ b/hora-de-codar/14_fundamentoscss/positions.html
@@ -12,6 +12,6 @@
         <div class="absolute mini-div"></div>
     </div>
     <div class="div-position absolute"></div>
-    <div class="div-position static"></div>
+    <div class="div-position fixed"></div>
 </body>
 </html>
