--- a/hora-de-codar/14_fundamentoscss/positions.html
+++ b/hora-de-codar/14_fundamentoscss/positions.html
@@ -13,5 +13,7 @@
     </div>
     <div class="div-position absolute"></div>
     <div class="div-position fixed"></div>
+    <div class="div-position sticky"></div>
+    <div class="div-position static"></div>
 </body>
 </html>
