--- a/hora-de-codar/14_fundamentoscss/index.html
+++ b/hora-de-codar/14_fundamentoscss/index.html
@@ -19,6 +19,9 @@
     <div>
         <a href="positions.html">positions</a>
     </div>
+    <div>
+        <a href="float.html">float</a>
+    </div>
     <h1>Titulo principal</h1>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam adipisci id ea, quaerat hic provident qui quia quisquam recusandae maiores ullam quidem! Saepe molestias adipisci laudantium fuga, quam aut! Saepe. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas sequi recusandae, dolores ratione, dolorum natus eligendi expedita maxime ipsa porro minus tempore necessitatibus labore culpa suscipit commodi accusamus! In, earum?Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint natus est eveniet earum accusantium odit? Voluptatibus, quia est nesciunt doloremque odio consequatur rerum cupiditate eius quod cum asperiores quo ad.lore Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint quos asperiores blanditiis vel dolorum non quibusdam sunt nesciunt quisquam facilis, doloremque soluta. Quaerat dignissimos esse eligendi veritatis iure obcaecati quasi?</p>
     <h2>Este é o segundo titulo</h2>
