bootstrap 5 - modulo fundamentos css - conhecendo o float

--- a/hora-de-codar/14_fundamentoscss/float.html
+++ b/hora-de-codar/14_fundamentoscss/float.html
@@ -13,11 +13,11 @@
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error, consequatur rem deserunt minus quia in enim velit corrupti explicabo mollitia doloribus nisi amet soluta perferendis dolores eaque officiis architecto accusamus.</p>
         </div>
         <div class="div-float">
-            <img class="div-float float-right" src="img/css_icon.png" >
+            <img class="img-float float-right" src="img/css_icon.png" >
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit nulla, corrupti cum accusantium molestiae consequuntur? Iusto accusantium molestiae dignissimos. Vitae nisi, accusantium omnis rerum excepturi eius accusamus officiis hic molestias!</p>
         </div>
         <div class="div-float">
-            <img class="div-float" src="img/js_icon.jpeg" >
+            <img class="img-float" src="img/js_icon.jpeg" >
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam voluptatum quis accusamus neque maxime! Cupiditate accusantium, possimus a consequuntur saepe perferendis in sed aspernatur consequatur necessitatibus nesciunt! Voluptates, soluta reprehenderit.</p>
         </div>
     </div>
