bootstrap 5 - modulo fundamentos css - utilizando o clear

--- a/hora-de-codar/14_fundamentoscss/float.html
+++ b/hora-de-codar/14_fundamentoscss/float.html
@@ -20,6 +20,10 @@
             <img class="img-float" src="img/js_icon.jpeg" >
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam voluptatum quis accusamus neque maxime! Cupiditate accusantium, possimus a consequuntur saepe perferendis in sed aspernatur consequatur necessitatibus nesciunt! Voluptates, soluta reprehenderit.</p>
         </div>
+        <div class="div-float">
+            <p class="float-right">este vai flutuar para a direita</p>
+            <p class="p-float clear">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam voluptatum quis accusamus neque maxime! Cupiditate accusantium, possimus a consequuntur saepe perferendis in sed aspernatur consequatur necessitatibus nesciunt! Voluptates, soluta reprehenderit.</p>
+        </div>
     </div>
 </body>
 </html>
