--- a/hora-de-codar/14_fundamentoscss/units.html
+++ b/hora-de-codar/14_fundamentoscss/units.html
@@ -12,8 +12,11 @@
         <div class="pixel-1"></div>
         <div class="pixel-2"></div>
     </div>
-    <div>
+    <div class="pai-porcentagem">
         <p>medidas em %</p>
+        <div class="porcentagem-1">
+            <div class="porcentagem-2"></div>
+        </div>
     </div>
     <div>
         <p>medidas em em</p>
