--- a/hora-de-codar/14_fundamentoscss/units.html
+++ b/hora-de-codar/14_fundamentoscss/units.html
@@ -18,8 +18,9 @@
             <div class="porcentagem-2"></div>
         </div>
     </div>
-    <div>
+    <div class="pai-em">
         <p>medidas em em</p>
+        <div class="em-1"></div>
     </div>
     <div>
         <p>medidas em rem</p>
