bootstrap 5 - modulo fundamentos css - unidade de medida rem

--- a/hora-de-codar/14_fundamentoscss/units.html
+++ b/hora-de-codar/14_fundamentoscss/units.html
@@ -22,8 +22,9 @@
         <p>medidas em em</p>
         <div class="em-1"></div>
     </div>
-    <div>
+    <div >
         <p>medidas em rem</p>
+        <div class="rem-1"></div>
     </div>
 </body>
 </html>
