--- a/hora-de-codar/15_projeto_agencia/index.html
+++ b/hora-de-codar/15_projeto_agencia/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="css/reset.css">
 </head>
 <body>
-    
+    <h1>teste css</h1>
+    <i class="fab fa-500px"></i>
 </body>
 </html>
