bootstrap 5 - modulo projeto agencia - criando o html do header

--- a/hora-de-codar/15_projeto_agencia/index.html
+++ b/hora-de-codar/15_projeto_agencia/index.html
@@ -9,7 +9,25 @@
     <link rel="stylesheet" type="text/css" href="css/reset.css">
 </head>
 <body>
-    <h1>teste css</h1>
-    <i class="fab fa-500px"></i>
+    <div class="container">
+        <header>
+            <div class="banner">
+                <div class="box-container">
+                    <div class="box-background"></div>
+                    <div class="box-banner-title">
+                        <h1>Agencia x</h1>
+                        <p>desenvolvendo os seus sitemas</p>
+                    </div>
+                </div>
+                <div class="company-info-container">
+                    <div class="company-info-background"></div>
+                    <div class="company-info-titlebox">
+                        <h2>Seja bem-vindo ao nosso site</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam blanditiis labore eveniet iure rem laborum quaerat assumenda quis incidunt et mollitia sunt aut earum atque, nobis, illo ratione illum ipsa.</p>
+                    </div>
+                </div>
+            </div>
+        </header>
+    </div>
 </body>
 </html>
