--- a/hora-de-codar/15_projeto_agencia/index.html
+++ b/hora-de-codar/15_projeto_agencia/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <div class="container">
+        <!-- banner -->
         <header>
             <div class="banner">
                 <div class="box-container">
