--- a/hora-de-codar/15_projeto_agencia/index.html
+++ b/hora-de-codar/15_projeto_agencia/index.html
@@ -29,6 +29,38 @@
                 </div>
             </div>
         </header>
+
+        <section>
+            <div class="services-container">
+                <div class="service-box">
+                    <div class="service-title" id="gerenciamento-box">
+                        <p>Gerenciamento de projetos</p>
+                    </div>
+                    <div class="service-description">
+                        <h3 id="gerenciamento-title">Lorem ipsim</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem officia vel aspernatur nihil eum dicta deserunt, totam est laborum voluptatum at facere cum autem non minima dignissimos, fugit laboriosam. Magni?</p>
+                    </div>
+                </div>
+                <div class="service-box">
+                    <div class="service-title" id="dev-box">
+                        <p>Desenvolvimento</p>
+                    </div>
+                    <div class="service-description">
+                        <h3 id="gerenciamento-title">Lorem ipsim</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem officia vel aspernatur nihil eum dicta deserunt, totam est laborum voluptatum at facere cum autem non minima dignissimos, fugit laboriosam. Magni?</p>
+                    </div>
+                </div>
+                <div class="service-box">
+                    <div class="service-title" id="design-box">
+                        <p>UX</p>
+                    </div>
+                    <div class="service-description">
+                        <h3 id="gerenciamento-title">Lorem ipsim</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem officia vel aspernatur nihil eum dicta deserunt, totam est laborum voluptatum at facere cum autem non minima dignissimos, fugit laboriosam. Magni?</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
 </body>
 </html>
