bootstrap 5 - modulo projeto agencia - html da sessao de servicos

--- a/hora-de-codar/15_projeto_agencia/index.html
+++ b/hora-de-codar/15_projeto_agencia/index.html
@@ -30,6 +30,7 @@
             </div>
         </header>
 
+        <!-- sessao de servicos -->
         <section>
             <div class="services-container">
                 <div class="service-box">
