--- a/hora-de-codar/15_projeto_agencia/index.html
+++ b/hora-de-codar/15_projeto_agencia/index.html
@@ -62,6 +62,31 @@
                 </div>
             </div>
         </section>
+
+        <!-- secao sobre a empresa -->
+        <div class="footer-container">
+            <section>
+                <div class="about-container">
+                    <div class="about-card">
+                        <i class="fas fa-server"></i>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam ab iusto blanditiis esse laudantium inventore molestiae minima itaque quasi quas, odio neque nesciunt quia sit praesentium quo deserunt eius saepe!</p>
+                    </div>
+                </div>
+                <div class="about-container">
+                    <div class="about-card middle-card">
+                        <i class="fas fa-briefcase"></i>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam ab iusto blanditiis esse laudantium inventore molestiae minima itaque quasi quas, odio neque nesciunt quia sit praesentium quo deserunt eius saepe!</p>
+                    </div>
+                </div>
+                <div class="about-container">
+                    <div class="about-card">
+                        <i class="fas fa-tablet-alt"></i>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam ab iusto blanditiis esse laudantium inventore molestiae minima itaque quasi quas, odio neque nesciunt quia sit praesentium quo deserunt eius saepe!</p>
+                    </div>
+                </div>
+            </section>
+        </div>
+
     </div>
 </body>
 </html>
