bootstrap 5 - modulo projeto agencia - html do formulario

--- a/hora-de-codar/15_projeto_agencia/index.html
+++ b/hora-de-codar/15_projeto_agencia/index.html
@@ -82,7 +82,7 @@
                 </div>
             </section>
             <footer>
-                <div class="form-ccontainer">
+                <div class="form-container">
                     <div class="form-background"></div>
                     <form>
                         <input type="text" name="name" id="name" placeholder="nome" >
