css para iniciantes - adicionando css internal

--- a/css-para-iniciantes/teoria/index.html
+++ b/css-para-iniciantes/teoria/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teoria css</title>
+    <style>
+        body {
+            padding: 20px;
+        }
+
+        p {
+            color: green;
+        }
+    </style>
 </head>
 <body>
     <p style="color: red;">paragrafo inline</p>
