css para iniciantes - adicionando css external

--- a/css-para-iniciantes/teoria/index.html
+++ b/css-para-iniciantes/teoria/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teoria css</title>
-    <style>
+    <!-- <style>
         body {
             padding: 20px;
         }
@@ -12,7 +12,8 @@
         p {
             color: green;
         }
-    </style>
+    </style> -->
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <p style="color: red;">paragrafo inline</p>
