css para iniciantes - classes e ids

--- a/css-para-iniciantes/teoria/index.html
+++ b/css-para-iniciantes/teoria/index.html
@@ -19,5 +19,12 @@
     <p style="color: red;">paragrafo inline</p>
     <p>paragrafo internal</p>
     <p>paragrafo external</p>
+
+    <!-- classes e ids -->
+    <h1 id="titulo-principal">titulo da pagina</h1>
+    <p class="meu-paragrafo">algum conteudo do site</p>
+    <p class="meu-paragrafo">algum conteudo do site</p>
+    <p class="meu-paragrafo">algum conteudo do site</p>
+    
 </body>
 </html>
