css para iniciantes - classes e ids

--- a/css-para-iniciantes/teoria/index.html
+++ b/css-para-iniciantes/teoria/index.html
@@ -25,6 +25,7 @@
     <p class="meu-paragrafo">algum conteudo do site</p>
     <p class="meu-paragrafo">algum conteudo do site</p>
     <p class="meu-paragrafo">algum conteudo do site</p>
+    <h2>testando</h2>
     
 </body>
 </html>
