css para iniciantes - cores

--- a/css-para-iniciantes/teoria/index.html
+++ b/css-para-iniciantes/teoria/index.html
@@ -26,6 +26,11 @@
     <p class="meu-paragrafo">algum conteudo do site</p>
     <p class="meu-paragrafo">algum conteudo do site</p>
     <h2>testando</h2>
+
+    <!-- cores -->
+    <p class="nome-da-cor">rosa</p>
+    <p class="hexa">hexadecimal</p>
+    <p class="rgb">rgb</p>
     
 </body>
 </html>
