css para iniciantes - fontes

--- a/css-para-iniciantes/teoria/index.html
+++ b/css-para-iniciantes/teoria/index.html
@@ -31,6 +31,17 @@
     <p class="nome-da-cor">rosa</p>
     <p class="hexa">hexadecimal</p>
     <p class="rgb">rgb</p>
-    
+
+    <!-- fontes -->
+    <p class="serifada">fonte serifada</p>
+    <p class="sem-serifa">sem serifada</p>
+    <p class="monoespacada">monoespacada</p>
+
+    <!-- size e wieght -->
+    <p class="tamanho-fonte-grande">esta fonte esta grande</p>
+    <p class="tamanho-fonte-pequeno">esta fonte esta pequena</p>
+    <p class="peso-fonte">este em negrito</p>
+    <p class="text-italico">este em italico</p>
+
 </body>
 </html>
