css para iniciantes - fontes

--- a/css-para-iniciantes/teoria/index.html
+++ b/css-para-iniciantes/teoria/index.html
@@ -37,7 +37,7 @@
     <p class="sem-serifa">sem serifada</p>
     <p class="monoespacada">monoespacada</p>
 
-    <!-- size e wieght -->
+    <!-- size e weight -->
     <p class="tamanho-fonte-grande">esta fonte esta grande</p>
     <p class="tamanho-fonte-pequeno">esta fonte esta pequena</p>
     <p class="peso-fonte">este em negrito</p>
