css para iniciantes - boxmodel

--- a/css-para-iniciantes/teoria/index.html
+++ b/css-para-iniciantes/teoria/index.html
@@ -43,5 +43,10 @@
     <p class="peso-fonte">este em negrito</p>
     <p class="text-italico">este em italico</p>
 
+    <!-- box model -->
+    <div class="box-model">
+        <p>este é um boxmodel</p>
+    </div>
+    
 </body>
 </html>
