css para iniciantes - propriedades de texto

--- a/css-para-iniciantes/teoria/index.html
+++ b/css-para-iniciantes/teoria/index.html
@@ -47,6 +47,12 @@
     <div class="box-model">
         <p>este é um boxmodel</p>
     </div>
+
+    <!-- propriedades de texto -->
+    <p class="alinhamento">texto no centro</p>
+    <p class="transform-maiusculo">texto todo em maiusculo</p>
+    <p class="transform-minusculo">texto todo em minusculo</p>
     
+
 </body>
 </html>
