css para iniciantes - propriedades de texto

--- a/css-para-iniciantes/teoria/index.html
+++ b/css-para-iniciantes/teoria/index.html
@@ -51,7 +51,7 @@
     <!-- propriedades de texto -->
     <p class="alinhamento">texto no centro</p>
     <p class="transform-maiusculo">texto todo em maiusculo</p>
-    <p class="transform-minusculo">texto todo em minusculo</p>
+    <p class="transform-minusculo">TEXTO TODO EM MINUSCULO</p>
     
 
 </body>
