css para iniciantes - espacamento de linhas e letras

--- a/css-para-iniciantes/teoria/index.html
+++ b/css-para-iniciantes/teoria/index.html
@@ -52,6 +52,10 @@
     <p class="alinhamento">texto no centro</p>
     <p class="transform-maiusculo">texto todo em maiusculo</p>
     <p class="transform-minusculo">TEXTO TODO EM MINUSCULO</p>
+
+    <!-- espacamentos de linhas e letras -->
+    <p class="espacamento-texto">Texto com espacamento entre linhas e letras</p>
+    
     
 
 </body>
