css para iniciantes - links

--- a/css-para-iniciantes/teoria/index.html
+++ b/css-para-iniciantes/teoria/index.html
@@ -56,6 +56,16 @@
     <!-- espacamentos de linhas e letras -->
     <p class="espacamento-texto">Texto com espacamento entre linhas e letras</p>
     
+    <!-- links -->
+    <div>
+        <a href="#" class="decoration">meu link 1</a>
+    </div>
+    <div>
+        <a href="https://www.google.com" class="visitado">meu link 2</a>
+    </div>
+    <div>
+        <a href="#" class="estilo-hover">meu link 3</a>
+    </div>
     
 
 </body>
