css para iniciantes - links

--- a/css-para-iniciantes/teoria/index.html
+++ b/css-para-iniciantes/teoria/index.html
@@ -67,6 +67,10 @@
         <a href="#" class="estilo-hover">meu link 3</a>
     </div>
     
+    <!-- link em button -->
+    <div>
+        <a href="#" class="btn">clique em mim</a>
+    </div>
 
 </body>
 </html>
