css para iniciantes - listas

--- a/css-para-iniciantes/teoria/index.html
+++ b/css-para-iniciantes/teoria/index.html
@@ -72,5 +72,17 @@
         <a href="#" class="btn">clique em mim</a>
     </div>
 
+    <!-- listas -->
+    <ul>
+        <li>lista</li>
+        <li>com</li>
+        <li>bullets</li>
+    </ul>
+    <ul class="sem-estilo">
+        <li>lista</li>
+        <li>sem</li>
+        <li>bullets</li>
+    </ul>
+
 </body>
 </html>
