css para iniciantes - display

--- a/css-para-iniciantes/teoria/index.html
+++ b/css-para-iniciantes/teoria/index.html
@@ -84,5 +84,12 @@
         <li>bullets</li>
     </ul>
 
+    <!-- display -->
+    <div class="inline"></div>
+    <div class="inline"></div>
+    <span class="bloco">teste</span>
+    <span class="bloco">teste 2</span>
+    <div class="inline hidden"></div>
+
 </body>
 </html>
