css para iniciantes - position

--- a/css-para-iniciantes/teoria/index.html
+++ b/css-para-iniciantes/teoria/index.html
@@ -91,5 +91,8 @@
     <span class="bloco">teste 2</span>
     <div class="inline hidden"></div>
 
+    <!-- position fixed -->
+    <div class="elemento-fixo">este elemento vai ficar fixo na tela</div>
+
 </body>
 </html>
