css para iniciantes - pseudo seletor

--- a/css-para-iniciantes/teoria/index.html
+++ b/css-para-iniciantes/teoria/index.html
@@ -94,5 +94,13 @@
     <!-- position fixed -->
     <div class="elemento-fixo">este elemento vai ficar fixo na tela</div>
 
+    <!-- first child -->
+    <div class="primeiro-elemento">
+        <p>este tera estilo</p>
+        <p>este nao</p>
+        <p>este nao</p>
+        <p>este nao</p>
+    </div>
+
 </body>
 </html>
