css para iniciantes - pseudo elemento

--- a/css-para-iniciantes/teoria/index.html
+++ b/css-para-iniciantes/teoria/index.html
@@ -102,5 +102,8 @@
         <p>este nao</p>
     </div>
 
+    <!-- pseudo elemento -->
+    <p class="primeira-letra">Esta frase começa com uma letra diferente</p>
+
 </body>
 </html>
