css para iniciantes - especifidade

--- a/css-para-iniciantes/teoria/index.html
+++ b/css-para-iniciantes/teoria/index.html
@@ -105,5 +105,10 @@
     <!-- pseudo elemento -->
     <p class="primeira-letra">Esta frase começa com uma letra diferente</p>
 
+    <!-- especifidade -->
+    <h2>meu titulo</h2>
+    <h2 class="titulo">meu titulo</h2>
+    <h2 class="titulo" id="meu-titulo-preferido">meu titulo</h2>
+
 </body>
 </html>
