css iniciantes - base - incluindo css inline

--- a/css-iniciantes/1_base/index.html
+++ b/css-iniciantes/1_base/index.html
@@ -6,6 +6,7 @@
     <title>curso de css - base</title>
 </head>
 <body>
-    
+    <!-- 1 - inline, head e body -->
+    <h1 style="color: green;">testando css inline</h1>
 </body>
 </html>
