css iniciantes - base - incluindo css interno

--- a/css-iniciantes/1_base/index.html
+++ b/css-iniciantes/1_base/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>curso de css - base</title>
+    <style>
+        h1 {
+            color: blue;
+        }
+    </style>
 </head>
 <body>
     <!-- 1 - inline, head e body -->
     <h1 style="color: green;">testando css inline</h1>
+
+    <h1>testando head</h1>
 </body>
 </html>
