css iniciantes - base - incluindo css externo

--- a/css-iniciantes/1_base/index.html
+++ b/css-iniciantes/1_base/index.html
@@ -9,11 +9,14 @@
             color: blue;
         }
     </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <!-- 1 - inline, head e body -->
     <h1 style="color: green;">testando css inline</h1>
 
     <h1>testando head</h1>
+
+    <p>testando css externo</p>
 </body>
 </html>
