--- a/css-iniciantes/1_base/index.html
+++ b/css-iniciantes/1_base/index.html
@@ -17,7 +17,15 @@
 
     <h1>testando head</h1>
 
-    <!-- css externo -->
+    <!-- 2 css externo -->
     <p>testando css externo</p>
+
+    <!-- 3 seletores comuns -->
+    <div>
+        <h2 class="titulo">este é meu titulo</h2>
+        <p id="paragrafo-especial">este é meu texto especial</p>
+        <h4>este é meu titulo com css por tag</h4>
+        <h2 class="titulo">este é o meu titulo 2</h2>
+    </div>
 </body>
 </html>
