css iniciantes - base - propriedades de texto

--- a/css-iniciantes/1_base/index.html
+++ b/css-iniciantes/1_base/index.html
@@ -28,7 +28,11 @@
         <h2 class="titulo">este é o meu titulo 2</h2>
     </div>
 
-
+    <!-- 4 - propriedades de texto -->
+    <p class="basic-text">texto basico</p>
+    <p class="styled-text">texto basico</p>
+    <p class="weight-text">texto basico</p>
+    <p class="fancy-text">texto basico</p>
 
 </body>
 </html>
