css iniciantes - base - cores

--- a/css-iniciantes/1_base/index.html
+++ b/css-iniciantes/1_base/index.html
@@ -34,5 +34,12 @@
     <p class="weight-text">texto basico</p>
     <p class="fancy-text">texto basico</p>
 
+    <!-- 5 - cores -->
+    <p class="hex-color">texto com com em hex</p>
+    <p class="rgb-color">texto com com em rgb</p>
+    <p class="hsl-color">texto com com em hsl</p>
+    <p class="rgba-color">texto com com em rgba</p>
+    <p class="hsla-color">texto com com em hsla</p>
+    
 </body>
 </html>
