css iniciantes - base - cores

--- a/css-iniciantes/1_base/index.html
+++ b/css-iniciantes/1_base/index.html
@@ -35,11 +35,11 @@
     <p class="fancy-text">texto basico</p>
 
     <!-- 5 - cores -->
-    <p class="hex-color">texto com com em hex</p>
-    <p class="rgb-color">texto com com em rgb</p>
-    <p class="hsl-color">texto com com em hsl</p>
-    <p class="rgba-color">texto com com em rgba</p>
-    <p class="hsla-color">texto com com em hsla</p>
+    <p class="hex-color">texto com cor em hex</p>
+    <p class="rgb-color">texto com cor em rgb</p>
+    <p class="hsl-color">texto com cor em hsl</p>
+    <p class="rgba-color">texto com cor em rgba</p>
+    <p class="hsla-color">texto com cor em hsla</p>
     
 </body>
 </html>
