css iniciantes - base - estilizando links

--- a/css-iniciantes/1_base/index.html
+++ b/css-iniciantes/1_base/index.html
@@ -40,6 +40,15 @@
     <p class="hsl-color">texto com cor em hsl</p>
     <p class="rgba-color">texto com cor em rgba</p>
     <p class="hsla-color">texto com cor em hsla</p>
+
+    <!-- 6 - estilizacao de links -->
+    <a href="#" class="simple-link">link simples</a>
+    <br />
+    <a href="#" class="fancy-link">link bonito</a>
+    <br />
+    <a href="#" class="hover-link">link com hover</a>
+    <br />
+    <a href="#" class="bold-link">link em negrito</a>
     
 </body>
 </html>
