css iniciantes - base - box model parte 1

--- a/css-iniciantes/1_base/index.html
+++ b/css-iniciantes/1_base/index.html
@@ -49,6 +49,12 @@
     <a href="#" class="hover-link">link com hover</a>
     <br />
     <a href="#" class="bold-link">link em negrito</a>
+
+    <!-- box model -->
+    <div class="width-height">largura e altura</div>
+    <div class="padding-exemple">exemplo de padding</div>
+    <div class="margin-exemple">exemplo de margin</div>
+    <div class="complete-box">exemplo completo</div>
     
 </body>
 </html>
