css iniciantes - base - box model parte 1

--- a/css-iniciantes/1_base/index.html
+++ b/css-iniciantes/1_base/index.html
@@ -50,7 +50,7 @@
     <br />
     <a href="#" class="bold-link">link em negrito</a>
 
-    <!-- box model -->
+    <!-- 7 - box model -->
     <div class="width-height">largura e altura</div>
     <div class="padding-exemple">exemplo de padding</div>
     <div class="margin-exemple">exemplo de margin</div>
