css iniciantes - base - positions

--- a/css-iniciantes/1_base/index.html
+++ b/css-iniciantes/1_base/index.html
@@ -55,6 +55,17 @@
     <div class="padding-exemple">exemplo de padding</div>
     <div class="margin-exemple">exemplo de margin</div>
     <div class="complete-box">exemplo completo</div>
+
+    <!-- 8 - positions -->
+    <div class="static-example">exemplo estatico</div>
+    <div class="relative-example">exemplo relative</div>
+    <div class="absolute-example">exemplo absolute</div>
+    <div class="fixed-example">exemplo fixa</div>
+    <div class="sticky-example">exemplo sticy</div>
+
+    <div class="relative-container">
+        <div class="absolute-inside-relative">absoluto dentro de relative</div>
+    </div>
     
 </body>
 </html>
