--- a/css-iniciantes/1_base/index.html
+++ b/css-iniciantes/1_base/index.html
@@ -66,6 +66,13 @@
     <div class="relative-container">
         <div class="absolute-inside-relative">absoluto dentro de relative</div>
     </div>
+
+    <!-- 9 - flexbox -->
+    <div class="flex-container">
+        <div class="flex-item">item 1</div>
+        <div class="flex-item">item 2</div>
+        <div class="flex-item">item 3</div>
+    </div>
     
 </body>
 </html>
