css iniciantes - base - resolucao exercicio 3

--- a/css-iniciantes/1_base/exercicios.html
+++ b/css-iniciantes/1_base/exercicios.html
@@ -9,5 +9,17 @@
 <body>
     <!-- exercicio 1 -->
     <div class="background-highlight">eu sou a div do exercicio 1</div>
+
+
+    <!-- exercicio 2 -->
+    <h1>titulo 1</h1>
+    <h1>titulo 2</h1>
+
+    <p class="text-large">vai aumentar a fonte desse cara</p>
+
+    <!-- exercicio 3 -->
+    <p class="hexa-color">cor azul hexa</p>
+
+    <div class="bg-opacity">esta div tem opacidade</div>
 </body>
 </html>
