css iniciantes - base - resolucao exercicio 4

--- a/css-iniciantes/1_base/exercicios.html
+++ b/css-iniciantes/1_base/exercicios.html
@@ -21,5 +21,10 @@
     <p class="hexa-color">cor azul hexa</p>
 
     <div class="bg-opacity">esta div tem opacidade</div>
+
+    <!-- exercicio 4 -->
+    <div class="padding-example">exemplo de padding</div>
+
+    <div class="width-height">exemplo de margem</div>
 </body>
 </html>
