--- a/css-iniciantes/1_base/exercicios.html
+++ b/css-iniciantes/1_base/exercicios.html
@@ -26,5 +26,10 @@
     <div class="padding-example">exemplo de padding</div>
 
     <div class="width-height">exemplo de margem</div>
+
+    <!-- exercicio 5 -->
+    <div class="relative-container">
+        <div class="absolutely-positioned"></div>
+    </div>
 </body>
 </html>
