css iniciantes - projeto cards - criando o html parte 1

--- a/css-iniciantes/2_projeto-cards/index.html
+++ b/css-iniciantes/2_projeto-cards/index.html
@@ -8,7 +8,20 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"/>
 </head>
 <body>
-    <h1>ola mundo</h1>
-    <i class="fab fa-facebook-f"></i>
+    <div class="card-container">
+        <div class="user-card">
+            <img src="img/user_a.webp" alt="john doe" class="user-image" >
+            <div class="user-info">
+                <h2>Jhon Doe</h2>
+                <p>Desenvolvedor front-end</p>
+                <div class="social-links">
+                    <a href="#" class="social-icon facebook">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="user-card"></div>
+    </div>
 </body>
 </html>
