--- a/css-iniciantes/2_projeto-cards/index.html
+++ b/css-iniciantes/2_projeto-cards/index.html
@@ -18,10 +18,33 @@
                     <a href="#" class="social-icon facebook">
                         <i class="fab fa-facebook-f"></i>
                     </a>
+                    <a href="#" class="social-icon instagram">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a href="#" class="social-icon linkedin">
+                        <i class="fab fa-linkedin-in"></i>
+                    </a>
                 </div>
             </div>
         </div>
-        <div class="user-card"></div>
+        <div class="user-card">
+            <img src="img/user_b.webp" alt="Olivia brown" class="user-image" >
+            <div class="user-info">
+                <h2>Olivia brown</h2>
+                <p>Desenvolvedor back-end</p>
+                <div class="social-links">
+                    <a href="#" class="social-icon facebook">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                    <a href="#" class="social-icon instagram">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a href="#" class="social-icon linkedin">
+                        <i class="fab fa-linkedin-in"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
