css iniciantes - projeto recursos avancados - unidades de medidas

--- a/css-iniciantes/3_recursos_avancados/index.html
+++ b/css-iniciantes/3_recursos_avancados/index.html
@@ -25,5 +25,13 @@
         <li>item 2</li>
         <li>item 3</li>
     </ul>
+
+    <!-- 3 - unidades de medidas -->
+    <div class="container">
+        <div class="pixel-box">medida em px</div>
+        <div class="percent-box">medida em %</div>
+        <p class="em-text">texto em em</p>
+        <p class="rem-text">texto em rem</p>
+    </div>
 </body>
 </html>
