css iniciantes - projeto recursos avancados - pseudo seletor

--- a/css-iniciantes/3_recursos_avancados/index.html
+++ b/css-iniciantes/3_recursos_avancados/index.html
@@ -33,5 +33,16 @@
         <p class="em-text">texto em em</p>
         <p class="rem-text">texto em rem</p>
     </div>
+
+    <!-- 4 - pseudo classes e pseudo elementos -->
+    <!-- quando o el. não eciste no html -->
+    <ul class="styled-list">
+        <li>item 1 (estilizar esse elemento)</li>
+        <li>item 2</li>
+        <li>item 3</li>
+    </ul>
+
+    <div class="hover-box">passe o mouse sobre mim</div>
+
 </body>
 </html>
