css iniciantes - projeto recursos avancados - gradients

--- a/css-iniciantes/3_recursos_avancados/index.html
+++ b/css-iniciantes/3_recursos_avancados/index.html
@@ -44,5 +44,10 @@
 
     <div class="hover-box">passe o mouse sobre mim</div>
 
+    <!-- 4 - gradient = degrade -->
+    <div class="linear-gradient-box">degrade linear</div>
+    <div class="radial-gradient-box">degrade em raio</div>
+    <div class="multiple-gradient-box">degrade multiplo</div>
+
 </body>
 </html>
