--- a/css-iniciantes/3_recursos_avancados/index.html
+++ b/css-iniciantes/3_recursos_avancados/index.html
@@ -49,5 +49,10 @@
     <div class="radial-gradient-box">degrade em raio</div>
     <div class="multiple-gradient-box">degrade multiplo</div>
 
+    <!-- 5 - text shadow e box shadow -->
+    <div class="box-shadow-example"></div>
+    <p class="text-shadow-example">este é um paragrafo com sombra</p>
+    <div class="multiple-shadow-box"></div>
+
 </body>
 </html>
