--- a/css-iniciantes/3_recursos_avancados/index.html
+++ b/css-iniciantes/3_recursos_avancados/index.html
@@ -54,5 +54,12 @@
     <p class="text-shadow-example">este é um paragrafo com sombra</p>
     <div class="multiple-shadow-box"></div>
 
+    <!-- 6 - z index -->
+    <div class="z-index-box">
+        <div class="box background"></div>
+        <div class="box middle"></div>
+        <div class="box foreground"></div>
+    </div>
+
 </body>
 </html>
