css iniciantes - projeto recursos avancados - variaveis

--- a/css-iniciantes/3_recursos_avancados/index.html
+++ b/css-iniciantes/3_recursos_avancados/index.html
@@ -61,5 +61,11 @@
         <div class="box foreground"></div>
     </div>
 
+    <!-- 7 - variaveis -->
+    <div class="content">
+        <p class="text">este é um texto com variavel</p>
+        <button class="button">botao</button>
+    </div>
+
 </body>
 </html>
