css iniciantes - projeto recursos avancados - grid

--- a/css-iniciantes/3_recursos_avancados/index.html
+++ b/css-iniciantes/3_recursos_avancados/index.html
@@ -67,5 +67,19 @@
         <button class="button">botao</button>
     </div>
 
+    <!-- 8 - grid -->
+    <div class="grid-container">
+        <div class="grid-item">item 1</div>
+        <div class="grid-item">item 2</div>
+        <div class="grid-item">item 3</div>
+    </div>
+
+    <div class="grid-container-area">
+        <header class="header">Cabeçalho</header>
+        <article class="main-container">Conteudo principal</article>
+        <aside class="aside">barra lateral</aside>
+        <footer class="footer">rodape</footer>
+    </div>
+
 </body>
 </html>
