--- a/css-iniciantes/3_recursos_avancados/exercicios.html
+++ b/css-iniciantes/3_recursos_avancados/exercicios.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="exercicios.css">
 </head>
 <body>
-    <!-- exeercicio 1 -->
+    <!-- exercicio 1 -->
     <div class="div1"></div>
     <div class="div2"></div>
     <div class="div3"></div>
