css iniciantes - projeto recursos avancados - resolucao exercicio 2

--- a/css-iniciantes/3_recursos_avancados/exercicios.html
+++ b/css-iniciantes/3_recursos_avancados/exercicios.html
@@ -11,5 +11,11 @@
     <div class="div1"></div>
     <div class="div2"></div>
     <div class="div3"></div>
+
+    <!-- exercicio 2 -->
+    <p class="p1">paragrafo 1</p>
+    <p class="p2">paragrafo 2</p>
+    <p class="p3">paragrafo 3</p>
+
 </body>
 </html>
