css iniciantes - projeto recursos avancados - resolucao exercicio 3

--- a/css-iniciantes/3_recursos_avancados/exercicios.html
+++ b/css-iniciantes/3_recursos_avancados/exercicios.html
@@ -17,5 +17,14 @@
     <p class="p2">paragrafo 2</p>
     <p class="p3">paragrafo 3</p>
 
+    <!-- exercicio 3 -->
+    <p class="paragraph">
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque, sapiente temporibus qui dolorem molestiae commodi nobis alias, neque provident quas distinctio facere earum? Vero perferendis soluta, ullam quasi atque assumenda!
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam voluptatum ratione optio perferendis harum blanditiis maiores odit. Amet, nam quibusdam perspiciatis sit, beatae non fuga vero repudiandae porro cumque voluptatibus!
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione, laborum sed distinctio debitis amet eaque nobis in voluptas ipsa praesentium ex sequi veritatis unde vitae ea aspernatur harum reiciendis nihil!
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora, maiores sapiente aut quam voluptatum a provident eos itaque nemo corrupti! Animi libero sequi recusandae provident iusto! Rerum ullam expedita saepe.
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod veniam dignissimos sunt inventore ratione, beatae pariatur doloremque tempore cum voluptate ad, commodi praesentium ullam magnam, accusamus tenetur ut reiciendis! Sunt.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores amet, nesciunt recusandae voluptatem velit dolorum sequi accusamus magni iste quasi laudantium minus ad sunt accusantium omnis harum. Eius, optio vel!
+    </p>
 </body>
 </html>
