css iniciantes - projeto recursos avancados - resolucao exercicio 4

--- a/css-iniciantes/3_recursos_avancados/exercicios.html
+++ b/css-iniciantes/3_recursos_avancados/exercicios.html
@@ -26,5 +26,11 @@
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod veniam dignissimos sunt inventore ratione, beatae pariatur doloremque tempore cum voluptate ad, commodi praesentium ullam magnam, accusamus tenetur ut reiciendis! Sunt.
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores amet, nesciunt recusandae voluptatem velit dolorum sequi accusamus magni iste quasi laudantium minus ad sunt accusantium omnis harum. Eius, optio vel!
     </p>
+
+    <!-- exercicio 4 -->
+    <h2 class="left">a esquerda</h2>
+    <h2 class="center">ao centro</h2>
+    <h2 class="right">a direita</h2>
+    
 </body>
 </html>
