css iniciantes - projeto recursos avancados - resolucao exercicio 5

--- a/css-iniciantes/3_recursos_avancados/exercicios.html
+++ b/css-iniciantes/3_recursos_avancados/exercicios.html
@@ -32,5 +32,10 @@
     <h2 class="center">ao centro</h2>
     <h2 class="right">a direita</h2>
     
+    <!-- exercicio 5 -->
+    <button class="uppercase">letras maiusculas</button>
+    <button class="lowercase">LETRAS MAIUSCULAS</button>
+    <button class="capitalize">letras capitilizadas</button>
+
 </body>
 </html>
