css iniciantes - projeto recursos avancados - resolucao exercicio 6

--- a/css-iniciantes/3_recursos_avancados/exercicios.html
+++ b/css-iniciantes/3_recursos_avancados/exercicios.html
@@ -37,5 +37,12 @@
     <button class="lowercase">LETRAS MAIUSCULAS</button>
     <button class="capitalize">letras capitilizadas</button>
 
+    <!-- exercicio 6 -->
+    <div class="background-container">
+        <div class="background-div">
+        </div>
+        <h2>este é o meu texto</h2>
+    </div>
+
 </body>
 </html>
