css iniciantes - projeto recursos avancados - resolucao exercicio 7

--- a/css-iniciantes/3_recursos_avancados/exercicios.html
+++ b/css-iniciantes/3_recursos_avancados/exercicios.html
@@ -44,5 +44,12 @@
         <h2>este é o meu texto</h2>
     </div>
 
+    <!-- exercicio 7 -->
+    <ul class="horizontal-menu">
+        <li>home</li>
+        <li>sobre</li>
+        <li>contato</li>
+    </ul>
+
 </body>
 </html>
