css iniciantes - projeto produto - criacao do html

--- a/css-iniciantes/4_projeto_produto/index.html
+++ b/css-iniciantes/4_projeto_produto/index.html
@@ -11,5 +11,46 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
+    <!-- header -->
+    <header class="header">
+        <div class="nav-container">
+            <nav>
+                <ul class="nav-links">
+                    <li><a href="#">Camisas</a></li>
+                    <li><a href="#">Calças</a></li>
+                    <li><a href="#">Acessorios</a></li>
+                </ul>
+            </nav>
+            <img src="img/logo.png" alt="loja de roupas" >
+            <div class="header-icons">
+                <div class="icon search-icon">
+                    <i class="fa fa-search"></i>
+                </div>
+                <div class="icon search-icon">
+                    <i class="fa fa-shopping-cart"></i>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <!-- detalhes do produto -->
+    <div class="product-container">
+        <div class="product-image">
+            <img src="img/produto.webp" alt="produto" >
+        </div>
+        <div class="product-detail">
+            <h1>gola polo sport</h1>
+        </div>
+    </div>
+
+    <!-- secao de transparencia -->
+    <div class="transparency-section">
+        <div class="transparency-box">
+            <h2>Transparencia total</h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo suscipit sapiente, eius excepturi alias nesciunt perspiciatis dolor molestias similique quaerat non animi! Inventore nemo blanditiis laudantium magnam? Vitae, iure officiis.
+            </p>
+        </div>
+    </div>
 </body>
 </html>
