--- a/bootstrap5-2021/aula04/index.html
+++ b/bootstrap5-2021/aula04/index.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>breakpoint</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
+    <h1>breakpoints</h1>
+    <hr>
+    <div class="text-center text-md-start text-xl-end">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet eum quisquam maiores at iusto ipsum tempore perspiciatis omnis molestias inventore laudantium aspernatur officia, et eos vel quasi minus, quibusdam cumque? Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum aliquid, eum expedita odit cupiditate tempora natus architecto minima fugiat vitae. Quam, deleniti exercitationem! Deserunt, quidem iste ratione ad exercitationem placeat? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim voluptatem distinctio aliquam aut, deserunt dicta et dolorum ipsam natus, consectetur facere reiciendis rerum aperiam provident nemo, ratione accusantium hic quaerat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae ullam architecto necessitatibus esse voluptatem dicta, tempora, vero doloremque dolorem eum aliquid libero quaerat. Dolores, inventore! Ex quibusdam repellat esse tempora!
+    </div>
 </body>
 </html>
