projeto bootstrap5-2021 - container

--- a/bootstrap5-2021/aula05/index.html
+++ b/bootstrap5-2021/aula05/index.html
@@ -18,5 +18,15 @@
         </p>
     </div>
     
+    <div class="container bg-info">
+        <h1>Containeres</h1>
+        <hr>
+        <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed, magni. Adipisci dolorum tenetur nulla laborum debitis delectus voluptatum aliquid a eaque omnis! Eveniet cum est molestias doloribus amet, doloremque quis. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nihil nemo, ipsam illo sequi repudiandae modi iure. Asperiores eligendi, ab, aliquid, similique possimus culpa aut perspiciatis laboriosam id voluptatibus quidem facere? Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint eaque error nulla ipsam libero adipisci nihil, architecto impedit beatae, sed suscipit, mollitia fugit asperiores voluptatum! Facere dignissimos atque dolores quibusdam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit minus mollitia iure! Cupiditate ex nemo amet aut, molestiae impedit id laudantium atque architecto fugit accusamus ea animi dignissimos quisquam incidunt.
+        </p>
+        <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed, magni. Adipisci dolorum tenetur nulla laborum debitis delectus voluptatum aliquid a eaque omnis! Eveniet cum est molestias doloribus amet, doloremque quis. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nihil nemo, ipsam illo sequi repudiandae modi iure. Asperiores eligendi, ab, aliquid, similique possimus culpa aut perspiciatis laboriosam id voluptatibus quidem facere? Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint eaque error nulla ipsam libero adipisci nihil, architecto impedit beatae, sed suscipit, mollitia fugit asperiores voluptatum! Facere dignissimos atque dolores quibusdam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit minus mollitia iure! Cupiditate ex nemo amet aut, molestiae impedit id laudantium atque architecto fugit accusamus ea animi dignissimos quisquam incidunt.
+        </p>
+    </div>
 </body>
 </html>
