--- a/bootstrap5-2021/aula05/index.html
+++ b/bootstrap5-2021/aula05/index.html
@@ -7,6 +7,16 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
+    <!--
+        variacoes de classes containeres
+        .container
+        .container-sm
+        .container-md
+        .container-lg
+        .container-xl
+        .container-xxl
+        .container-fluid
+    -->
     <div class="container-fluid bg-info">
         <h1>Containeres</h1>
         <hr>
