--- a/bootstrap5-2021/aula06/index.html
+++ b/bootstrap5-2021/aula06/index.html
@@ -6,6 +6,9 @@
     <title>Sistema de leiaute em grid</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
+        .h100 {
+            height: 100px;
+        }
         .h400 {
             height: 400px;
         }
@@ -14,9 +17,10 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-3 bg-dark bg-opacity-50 h400"></div>
-            <div class="col-6 bg-dark bg-opacity-75 h400"></div>
-            <div class="col-3 bg-dark bg-opacity-50 h400"></div>
+            <div class="col-12 bg-dark bg-opacity-50 h100"></div>
+            <div class="col-12 col-sm-3 bg-dark bg-opacity-75 h400"></div>
+            <div class="col-12 col-sm-9 bg-dark bg-opacity-25 h400"></div>
+            <div class="col-12 bg-dark bg-opacity-50 h100"></div>
         </div>
     </div>
 </body>
