projeto bootstrap5-2021 - sistema de laiaout em grid

--- a/bootstrap5-2021/aula06/index.html
+++ b/bootstrap5-2021/aula06/index.html
@@ -23,5 +23,25 @@
             <div class="col-12 bg-dark bg-opacity-50 h100"></div>
         </div>
     </div>
+    <div class="container" style="margin-top: 10px;">
+        <div class="row">
+            <div class="row">
+                <div class="col bg-dark bg-opacity-50 h100"></div>
+                <div class="col bg-dark bg-opacity-75 h100"></div>
+                <div class="col bg-dark bg-opacity-50 h100"></div>
+                <div class="col bg-dark bg-opacity-75 h100"></div>
+                <div class="col bg-dark bg-opacity-50 h100"></div>
+            </div>
+            <div class="row">
+                <div class="col bg-dark bg-opacity-50 h100"></div>
+                <div class="col bg-dark bg-opacity-75 h100"></div>
+                <div class="col bg-dark bg-opacity-50 h100"></div>
+                <div class="col bg-dark bg-opacity-75 h100"></div>
+                <div class="col bg-dark bg-opacity-50 h100"></div>
+                <div class="col bg-dark bg-opacity-75 h100"></div>
+                <div class="col bg-dark bg-opacity-50 h100"></div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
