--- a/bootstrap5-2021/aula07/index.html
+++ b/bootstrap5-2021/aula07/index.html
@@ -19,10 +19,10 @@
 </head>
 <body>
     <div class="container">
-        <div class="row align-items-end">
-            <div class="col-3">Coluna 1</div>
-            <div class="col-3">Coluna 2</div>
-            <div class="col-3">Coluna 3</div>
+        <div class="row">
+            <div class="col-3 align-self-start">Coluna 1</div>
+            <div class="col-3 align-self-center">Coluna 2</div>
+            <div class="col-3 align-self-end">Coluna 3</div>
         </div>
     </div>
 </body>
