--- a/bootstrap5-2021/aula07/index.html
+++ b/bootstrap5-2021/aula07/index.html
@@ -19,11 +19,55 @@
 </head>
 <body>
     <div class="container">
+        <div class="row align-items-center">
+            <div class="col-3">Coluna 1</div>
+            <div class="col-3">Coluna 2</div>
+            <div class="col-3">Coluna 3</div>
+        </div>
+    </div>
+
+    <div class="container" style="margin-top: 10px;">
         <div class="row">
             <div class="col-3 align-self-start">Coluna 1</div>
             <div class="col-3 align-self-center">Coluna 2</div>
             <div class="col-3 align-self-end">Coluna 3</div>
         </div>
+    </div>
+
+    <div class="container" style="margin-top: 10px;">
+        <div class="row justify-content-evenly">
+            <div class="col-3">Coluna 1</div>
+            <div class="w-100"></div>
+            <div class="col-3 order-last">Coluna 2</div>
+            <div class="col-3">Coluna 3</div>
+        </div>
+    </div>
+
+
+    <div class="container" style="margin-top: 10px;">
+        <div class="row">
+            <div class="col-3 offset-1">Coluna 1</div>
+            <div class="col-3 offset-2">Coluna 2</div>
+            <div class="col-3">Coluna 3</div>
+        </div>
+    </div>
+
+    <div class="container" style="margin-top: 10px;">
+        <div class="row">
+            <div class="col-3 ms-auto">Coluna 1</div>
+            <div class="col-3 ms-auto">Coluna 2</div>
+        </div>
+    </div>
+
+    <div class="container" style="margin-top: 10px;">
+        <div class="row">
+            <div class="col-3 mx-auto">Coluna 1</div>
+        </div>
+    </div>
+
+    <div class="container" style="margin-top: 10px;">
+        <div class="col-3">Coluna 1</div>
+        <div class="col-3">Coluna 1</div>
     </div>
 </body>
 </html>
