projeto bootstrap5-2021 - tipografi

--- a/bootstrap5-2021/aula08/index.html
+++ b/bootstrap5-2021/aula08/index.html
@@ -15,5 +15,37 @@
         <h5>h5 - titulo de nivel 5</h5>
         <h6>h6 - titulo de nivel 6</h6>
     </div>
+    <hr>
+    <div class="container">
+        <h1 class="display-1">Display 1</h1>
+        <h1 class="display-2">Display 2</h1>
+        <h1 class="display-3">Display 3</h1>
+        <h1 class="display-4">Display 4</h1>
+        <h1 class="display-5">Display 5</h1>
+        <h1 class="display-6">Display 6</h1>
+    </div>
+    <hr>
+    <div class="container">
+        <p class="lead">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae illum voluptatibus fugiat officiis quisquam, tempore placeat dolore iusto? Eos distinctio nisi voluptate quia fuga illum odit optio rem illo officiis.
+        </p>
+    </div>
+    <hr>
+    <div class="container">
+        <ul class="list-unstyled">
+            <li>item 1</li>
+            <li>item 2</li>
+            <li>item 3</li>
+            <li>item 4</li>
+            <li>item 5</li>
+        </ul>
+        <hr>
+        <ul class="list-inline">
+            <li class="list-inline-item">item 1</li>
+            <li class="list-inline-item">item 2</li>
+            <li class="list-inline-item">item 3</li>
+            <li class="list-inline-item">item 4</li>
+        </ul>
+    </div>
 </body>
 </html>
